tests/sumo/tls/NEMA/errors/customDetectorsMissing/options.sumo
--no-step-log --no-duration-log --net-file=net.net.xml --routes=input_routes.rou.xml 
-a input_additional2.add.xml
--tls.actuated.show-detectors
--collision.check-junctions
